2009-08-14  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/attack.c,
	openvasd/comm.c,
	openvasd/hosts.c:
	Cosmetics.
	
	* openvasd/comm.c (qsort_cmp):
	Added TODO regarding sorting mechanisms (consolidate, improve function
	naming).
	
	* openvasd/hosts.c (struct host):
	Added TODO, as this struct could be stripped down and put in a list or
	hashtable.

2009-08-14  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/comm.h:
	Whitespace removal, corrected filename in comment.
	
	* ChangeLog:
	Minor reformatting.

2009-08-10  Vlatko Kosturjak <kost@linux.hr>

	* cnvts/3com_hub/Makefile,
	cnvts/3com_hub/3com_hub.c:
	removal of 3com_hub C plugin.  Plugin did not work (return 
	function at the beginning of plugin) and it is superseeded by
	scripts/remote-net-hub-3com.nasl

2009-08-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* packaging/debian/watch,
	packaging/debian/changelog:
	Removed/moved to /openvas-packaging/openvas-server/debian/trunk.

2009-08-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* packaging/debian,
	packaging/debian/openvas-server.dirs,
	packaging/debian/control,
	packaging/debian/openvas-server.init,
	packaging/debian/compat,
	packaging/debian/openvas-server.config,
	packaging/debian/openvas-server.install,
	packaging/debian/patches,
	packaging/debian/patches/12_openvas_nvt-sync-var.dpatch,
	packaging/debian/patches/10_bashism.dpatch,
	packaging/debian/patches/00list,
	packaging/debian/patches/11_openvas-nvt-sync.dpatch,
	packaging/debian/changelog,
	packaging/debian/rules,
	packaging/debian/openvas-server-dev.dirs,
	packaging/debian/openvas-server-dev.install,
	packaging/debian/openvas-server.postinst,
	packaging/debian/openvas-server.default,
	packaging/debian/openvas-server.postrm,
	packaging/debian/openvas-server.prerm,
	packaging/debian/openvasd.conf,
	packaging/debian/openvas-server.docs,
	packaging/debian/copyright,
	packaging/debian/openvas-server.templates,
	packaging/debian/po,